--- a/frangoAçai/index.html
+++ b/frangoAçai/index.html
@@ -6,9 +6,11 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Latest compiled and minified CSS -->
+    <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
+    <!--My CSS-->
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
 </head>
 <body>
@@ -153,21 +155,60 @@
         </div>
     </div>
     <div class="container" id="contato">
-        
         <h1 class="display-4">Contato / Delivery</h1>
-        <div class="row">
-            <div class="col-sm-12">
-                <p> Fazemos entrega por toda a região do Alvarenga e Arredores, ligue e verifique se atendemos a sua região!</p>
-                <p>Venha conhecer nosso estabelecimento, <br> Estamos na Rua Modesto Salera, 61  - Jardim Thelma <br>São Bernardo do Campo - SP</p>
-                <p> Telefones para Contato<br> <i class="fas fa-phone"></i> 2833-0639 ou <i class="fab fa-whatsapp"></i> 96162-9367 </p>
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-endereco" role="tab" aria-controls="nav-endereco" aria-selected="true">Endereço</a>
+                    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-delivery" role="tab" aria-controls="nav-delivery" aria-selected="false">Delivery</a>
+                    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-horario" role="tab" aria-controls="nav-horario" aria-selected="false">Horários</a>
+                </div>
+            </nav>
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="nav-endereco" role="tabpanel" aria-labelledby="nav-endereco-tab">
+                    <div class="row">
+                    <div class="col-sm-4 text-center">
+                    <br><p>Venha conhecer nosso estabelecimento<br> <b>Localização: </b><br>Rua Modesto Salera, 61  - Jardim Thelma <br>São Bernardo do Campo - SP</p>
+                    </div>
+                        <!--Google map-->
+                        <iframe class="col-sm-8" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1826.1735114622488!2d-46.59294344207505!3d-23.73500149614923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce414d16ab956d%3A0xdb64dd24d6332d7b!2sR.+Modesto+Salera%2C+61+-+Alvarenga%2C+S%C3%A3o+Bernardo+do+Campo+-+SP%2C+09850-730!5e0!3m2!1spt-BR!2sbr!4v1542319459308" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="tab-pane fade text-center" id="nav-delivery" role="tabpanel" aria-labelledby="nav-delivery-tab">
+                    <p> <i class="fas fa-truck"></i>Fazemos entrega por toda a região do Alvarenga e Arredores <br> ligue e verifique as taxas de entrega. <i class="fas fa-truck"></i></p>
+                    <p> Telefones para Contato<br> <i class="fas fa-phone"></i> 2833-0639 ou <i class="fab fa-whatsapp"></i> 96162-9367 </p>
+                </div>
+                <div class="tab-pane fade" id="nav-horario" role="tabpanel" aria-labelledby="nav-horario-tab">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            Trabalhamos de <b>Terça</b> à<b> Domingo</b>!
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Terça à Quinta Feira</h5>
+                                    <p class="card-text">Atendemos das 12:00 às 22:00.</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div class="card-body">
+                                    <h5 class="card-title">Sexta à Domingo</h5>
+                                    <p class="card-text">Atendemos das 12:00 às 23:00</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
     </div>
     <footer>
         <div class="container-fluid">
             <p class="text-center"> &copy; Powered by Matheus Batista</p>
         </div>
     </footer>
-    
+
+    <!--Bootstrap 4.1.3-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
